--- a/frontend/src/css/Footer.css
+++ b/frontend/src/css/Footer.css
@@ -1,14 +1,21 @@
 .footer-container {
-    background-color: #60a069; /* Color verde agradable */
+    background-color: #57bb64; /* Color verde agradable */
     padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap; /* Permite que los elementos se ajusten */
+}
+
+.footer-left {
+    flex: 1;
+    text-align: left;
+    color: white;
 }
 
 .contact-button {
-    background-color: white;
-    color: #3a6f41; /* Color verde del fondo */
+    background-color: transparent; /* Fondo transparente */
+    color: white; /* Letras blancas */
     padding: 10px 10px;
     border: none;
     border-radius: 4px;
@@ -16,13 +23,16 @@
 }
 
 .contact-button:hover {
-    background-color: #f1f1f1;
+    color: #f1f1f1; /* Cambia a un blanco más claro al pasar el mouse */
+    text-decoration: underline; /* Agrega un subrayado al pasar el mouse */
 }
+
 
 .social-icons {
     display: flex;
     justify-content: center;
     gap: 15px;
+    flex: 1;
 }
 
 .social-icons img {
@@ -37,6 +47,7 @@
 }
 
 .footer-right {
-    margin-left: auto;
+    flex: 1;
+    text-align: right;
     color: white;
 }
