--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -4,7 +4,7 @@
 }
 
 .hero-section {
-    background-color: #633ead; /* Púrpura */
+    background-color: #6E55E0; /* Púrpura */
     padding: 50px 20px;
 }
 
@@ -51,10 +51,22 @@
     text-align: center;
 }
 
+.feature-icon1 {
+    width: 240px;
+    height: 170px;
+    margin-bottom: 1px;
+}
+
+.feature-icon2 {
+    width: 190px;
+    height: 170px;
+    margin-bottom: 1px;
+}
+
 .feature-icon {
-    width: 80px;
-    height: 80px;
-    margin-bottom: 15px;
+    width: 170px;
+    height: 170px;
+    margin-bottom: 1px;
 }
 
 .feature-title {
