--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,5 +1,7 @@
+/* Mantén el contenedor del formulario a 600px de ancho */
 .container {
     max-width: 600px;
+    width: 100%; /* Asegura que el contenedor ocupe todo el ancho disponible hasta 600px */
     margin: 0 auto;
     padding: 20px;
     background-color: #f5f5f5;
@@ -7,22 +9,26 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Título del formulario */
 h2 {
     color: #4CAF50; /* Verde */
     text-align: center;
     margin-bottom: 20px;
 }
 
+/* Grupos de formulario */
 .form-group {
     margin-bottom: 15px;
 }
 
+/* Etiquetas del formulario */
 .form-group label {
     display: block;
     margin-bottom: 5px;
     color: #6A1B9A; /* Púrpura */
 }
 
+/* Campos de entrada del formulario */
 .form-group input[type="text"],
 .form-group input[type="file"] {
     width: 100%;
@@ -32,6 +38,7 @@ h2 {
     box-sizing: border-box;
 }
 
+/* Botón del formulario */
 .btn {
     background-color: #4CAF50; /* Verde */
     color: white;
@@ -48,3 +55,21 @@ h2 {
     background-color: #45a049;
 }
 
+/* Estilos globales */
+.App {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content-wrapper {
+    flex: 1;
+    display: flex;
+    justify-content: center; /* Centra el contenido horizontalmente */
+    align-items: center;    /* Centra el contenido verticalmente */
+}
+
+/* Ajusta el Footer para que esté siempre en la parte inferior */
+footer {
+    margin-top: auto;
+}
