--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -50,7 +50,7 @@
     background-color: #45a049;
 }
 .consult-button:last-child {
-    background-color: #6c63ff; /* Púrpura */
+    background-color: #3f51b5; /* Púrpura */
 }
 .consult-button:last-child:hover {
     background-color: #4e4ab7;
