--- a/frontend/src/css/Footer.css
+++ b/frontend/src/css/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: #57bb64; /* Color verde agradable */
+    background-color: #6acf77; /* Color verde agradable */
     padding: 20px;
     display: flex;
     justify-content: space-between;
