--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -4,7 +4,7 @@
 }
 
 .hero-section {
-    background-color: #4a60d8; /* Púrpura */
+    background-color: #6E55E0; /* Púrpura */
     padding: 50px 20px;
 }
 
