--- a/frontend/src/css/ChatComponent.css
+++ b/frontend/src/css/ChatComponent.css
@@ -179,42 +179,67 @@
     position: relative;
     max-width: 90%;
     max-height: 90%;
-}
-
-.image-preview-content img {
-    width: 100%;
-    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px; /* Espacio alrededor de la imagen */
+    background: #333; /* Fondo oscuro para resaltar la imagen */
     border-radius: 10px;
 }
 
+.image-preview-content img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    min-width: 200px; /* Tamaño mínimo para imágenes pequeñas */
+    min-height: 200px; /* Altura mínima para imágenes pequeñas */
+    object-fit: contain; /* Escala la imagen manteniendo su relación de aspecto */
+    border-radius: 10px;
+}
+
+/* Estilo para los íconos de descarga y cierre para evitar que se solapen */
 .download-icon,
 .close-icon {
     position: absolute;
     top: 10px;
-    color: rgba(255, 255, 255, 0.8); /* Color semi-transparente */
+    color: rgba(255, 255, 255, 0.8);
     font-size: 1.5rem;
     cursor: pointer;
     transition: color 0.3s;
-    background: transparent; /* Sin fondo */
-    border: none; /* Sin borde */
-    padding: 5px; /* Espacio interno para mejor interacción */
-    outline: none; /* Elimina el borde de foco */
-    box-shadow: none; /* Elimina cualquier sombra */
+    z-index: 2;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 12px;
+    border-radius: 50%;
+    width: 38px;
+    height: 38px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
 }
 
 .download-icon {
-    right: 50px; /* Espacio suficiente entre los iconos */
+    right: 65px;
 }
 
 .close-icon {
-    right: 10px;
+    right: 15px;
+}
+
+
+.download-icon:hover,
+.close-icon:hover {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
 .download-icon:hover,
 .close-icon:hover {
-    color: white; /* Color blanco puro al hacer hover */
-    background-color: transparent; /* Sin color de fondo */
-    box-shadow: none; /* Sin sombra en el hover */
+    color: white; /* Color blanco al hacer hover */
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo sutil al hacer hover */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Sombra más fuerte al hacer hover */
 }
 
 .meet-button-container {
@@ -236,7 +261,3 @@
 .meet-button-container:hover {
     background-color: #45a049;
 }
-
-
-
-
