mejoras doctor detail + arreglos en lista de doctores

--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -57,7 +57,7 @@
 }
 
 .doctor-biography-container {
-    text-align: center;
+    text-align: left;
     width: 100%;
     max-width: 700px;
     border: 1px solid #ddd;
