--- a/frontend/src/css/DoctorDetail.css
+++ b/frontend/src/css/DoctorDetail.css
@@ -143,9 +143,17 @@ h3{
 }
 
 /* Etiquetas del formulario */
+.modal-label-calendary {
+    color: #301466;
+    margin-bottom: -5px;
+    text-align: left;
+    width: 100%;
+}
+
+/* Tipo de consulta */
 .modal-label {
     color: #301466;
-    margin-bottom: 8px;
+    margin-bottom: -5px;
     text-align: left;
     width: 100%;
 }
@@ -156,16 +164,30 @@ h3{
     padding: 8px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    margin-bottom: 16px;
+    margin-bottom: 8px; /* Reducido el margen inferior */
 }
 
-/* Campo de selección de hora */
+/* Separación entre tipo de consulta y hora */
 .input-field {
     width: 100%;
     padding: 8px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    margin-bottom: 16px;
+    margin-bottom: 3px; /* Reducido el margen inferior */
+}
+/* Ajustar el espacio entre el tipo de consulta y la hora */
+.modal-form > .modal-label {
+    margin-bottom: -5px; /* Reducido el espacio entre etiquetas */
+}
+
+/* Ajustar el espacio entre el campo de hora y tipo de consulta */
+.modal-label-calendary {
+    margin-bottom: -5px; /* Separación entre calendario y tipo consulta */
+}
+
+/* Ajustar la separación entre el campo de hora y tipo de consulta */
+.calendar-picker {
+    margin-bottom: 8px; /* Añadir un pequeño espacio entre el calendario y el select */
 }
 
 .input-field:focus {
@@ -208,5 +230,47 @@ h3{
 
 .close-modal:hover {
     background-color: #c0392b;
+}
+
+
+
+/* Estilo del modal de confirmación */
+.confirmation-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.confirmation-modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.confirmation-modal-content h3 {
+    margin-bottom: 20px;
+}
+
+.confirmation-modal-content button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.confirmation-modal-content button:hover {
+    background-color: #45a049;
 }
 
